* Automatic white-space cleanup. * Handle the new B_DEBUGGER_MESSAGE_HANDED_OVER and pick the "causing thread"   as our first victim. Fixes #2956.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@29303 a95241bf-73f2-0310-859d-f6bbb57e9c96